--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Title: Tourist Visit from different country to Lumbini
-Author: Kishan K.C.
+Author: Subash Shrestha 
 License: GPL-3
 DisplayMode: Showcase
 Tags: getting-started
