--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Title: Tourist Visit from different country to Lumbini
+Title: Select the best car for your trip 
 Author: Subash Shrestha 
 License: GPL-3
 DisplayMode: Showcase
